--- a/templates/main/newPassword.html.twig
+++ b/templates/main/newPassword.html.twig
@@ -24,18 +24,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    {{ form_start(emailForm, {'attr': {'id': 'emailForm'}}) }}
+                    {{ form_start(form, {'attr': {'id': 'emailForm'}}) }}
                     <form method="post">
-                        {{ form_widget(emailForm.email,{'attr':{'class':'form-control','placeholder': "Email"}}) }}
+                        {{ form_widget(form.password ,{'attr':{'class':'form-control','placeholder': "enter verif code"}}) }}
 
 
                         <div class="d-flex align-items-center">
                             <button style="margin-top: 20px" type="submit" class="default-btn me-3">
-                                Send Me Email
+                                send
                             </button>
                             <p style="margin-top: 40px">Don’t have an account? <a href="{{path('register')}}">Register now</a></p>
                         </div>
-                        {{ form_row(emailForm._token) }}
+                        {{ form_end(form) }}
                     </form>
                 </div>
 
@@ -48,11 +48,7 @@
     <!-- End Footer Area -->
 
     <!-- Start Copyright Area -->
-    <div class="copy-right-area">
-        <div class="container">
-            <p>© Bexi is Proudly Owned by <a href="https://envytheme.com/" target="_blank">EnvyTheme</a></p>
-        </div>
-    </div>
+
     <!-- End Copyright Area -->
 
     <!-- Start Go Top Area -->
