--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -40,7 +40,7 @@
                                                 </label>
                                             </div>
                                             <div class="form-check">
-                                                <a href="{{path('forgetPassword')}}">Forgot password ?</a>
+                                                <a href="{{path('resetPassword')}}">Forgot password ?</a>
                                             </div>
                                         </div>
                                     </div>
