--- a/templates/back_office/Security/listMedecin.html.twig
+++ b/templates/back_office/Security/listMedecin.html.twig
@@ -3,26 +3,6 @@
 
 <body class="kt-quick-panel--right kt-demo-panel--right kt-offcanvas-panel--right kt-header--fixed kt-header-mobile--fixed kt-subheader--fixed kt-subheader--enabled kt-subheader--solid kt-aside--enabled kt-aside--fixed kt-page--loading">
 <!-- begin:: Page -->
-<div  class="kt-grid kt-grid--hor kt-grid--root">
-    <div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--ver kt-page">
-
-        <!-- begin:: Aside -->
-        <button class="kt-aside-close " id="kt_aside_close_btn"><i class="la la-close"></i></button>
-
-        <!-- end:: Aside -->
-        <div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor kt-wrapper" id="kt_wrapper">
-
-            <!-- begin:: Header -->
-
-            <!-- end:: Header -->
-            <div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor">
-
-                <!-- begin:: Content Head -->
-
-                <!-- end:: Content Head -->
-
-                <!-- begin:: Content -->
-                <div style="margin-right: 300px" class="kt-content  kt-grid__item kt-grid__item--fluid" id="kt_content">
 
                     <!--begin:: Widgets/Applications/User/Profile3-->
                     {% for u in user %}
@@ -63,7 +43,7 @@
                                                 {% endif %}
 
                                                  {% if u.baned %}
-                                                  <a type="button" href="{{path('adminBan',{'id':u.id})}}" class="btn btn-label-danger">Baned</a>&nbsp;
+                                                  <a type="button" href="{{path('adminUnban',{'id':u.id})}}" class="btn btn-label-danger">Unaned</a>&nbsp;
                                                  {% endif %}
                                                      </div>
                                         </div>
@@ -131,87 +111,6 @@
                     </div>
                     {% endif %}
                     {% endfor %}
-
-
-
-                    <!--Begin::pagination-->
-                    <div class="row">
-                        <div class="col-xl-12">
-
-                            <!--begin:: Components/Pagination/Default-->
-                            <div class="kt-portlet">
-                                <div class="kt-portlet__body">
-
-                                    <!--begin: Pagination-->
-                                    <div class="kt-pagination kt-pagination--brand">
-                                        <ul class="kt-pagination__links">
-                                            <li class="kt-pagination__link--first">
-                                                <a href="#"><i class="fa fa-angle-double-left kt-font-brand"></i></a>
-                                            </li>
-                                            <li class="kt-pagination__link--next">
-                                                <a href="#"><i class="fa fa-angle-left kt-font-brand"></i></a>
-                                            </li>
-                                            <li>
-                                                <a href="#">...</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">29</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">30</a>
-                                            </li>
-                                            <li class="kt-pagination__link--active">
-                                                <a href="#">31</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">32</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">33</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">34</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">...</a>
-                                            </li>
-                                            <li class="kt-pagination__link--prev">
-                                                <a href="#"><i class="fa fa-angle-right kt-font-brand"></i></a>
-                                            </li>
-                                            <li class="kt-pagination__link--last">
-                                                <a href="#"><i class="fa fa-angle-double-right kt-font-brand"></i></a>
-                                            </li>
-                                        </ul>
-                                        <div class="kt-pagination__toolbar">
-                                            <select class="form-control kt-font-brand" style="width: 60px">
-                                                <option value="10">10</option>
-                                                <option value="20">20</option>
-                                                <option value="30">30</option>
-                                                <option value="50">50</option>
-                                                <option value="100">100</option>
-                                            </select>
-                                            <span class="pagination__desc">
-														Displaying 10 of 230 records
-													</span>
-                                        </div>
-                                    </div>
-
-                                    <!--end: Pagination-->
-                                </div>
-                            </div>
-
-                            <!--end:: Components/Pagination/Default-->
-                        </div>
-                    </div>
-                    <!--End::pagination-->
-                </div>
-
-                <!-- end:: Content -->
-            </div>
-
-        </div>
-    </div>
-</div>
 
 <!-- end:: Page -->
 
