--- a/templates/main/baned.html.twig
+++ b/templates/main/baned.html.twig
@@ -13,7 +13,9 @@
                         <div class="page-banner-content">
                         <div class="row">
                             <div class="col-lg-12" style="width: 500px;margin-left: 50px" >
-                                <h4>You are banned for some reason please call the administration...</h4>
+                                <div style="color: red;font-size: 50px">You are banned </div>
+                                <h4>Administration message :</h4>
+                                <h4>{{ app.user.baned}} </h4>
                              </div>
 
                         </div>
