--- a/templates/nav_con.html.twig
+++ b/templates/nav_con.html.twig
@@ -79,7 +79,7 @@
                                                 <a href="{{path('app_reservation_index')}}" class="nav-link">Consultations</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="department-orthopedics.html" class="nav-link">Department Orthopedics</a>
+                                                <a href="{{path('app_ordonnance_patient_index')}}" class="nav-link">mes ordonnance</a>
                                             </li>
                                             <li class="nav-item">
                                                 <a href="find-a-doctor.html" class="nav-link">Find A Doctor</a>
