--- a/templates/back_office/medicament/index.html.twig
+++ b/templates/back_office/medicament/index.html.twig
@@ -12,7 +12,7 @@
                 <th>Id</th>
                 <th>Nom</th>
                 <th>Type</th>
-                <th>Nb_dose</th>
+                <th>Nombre des doses</th>
                 <th>Prix</th>
                 <th>Stock</th>
                 <th>Actions</th>
