--- a/templates/back_office/pharmacie/index.html.twig
+++ b/templates/back_office/pharmacie/index.html.twig
@@ -11,9 +11,9 @@
                 <th>Id</th>
                 <th>Nom</th>
                 <th>Adresse</th>
-                <th>Temp Overture</th>
-                <th>Tempf</th>
-                <th>actions</th>
+                <th>Temps Overture</th>
+                <th>Temps de fermeture</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
