--- a/templates/main/patient.html.twig
+++ b/templates/main/patient.html.twig
@@ -61,8 +61,12 @@
 									</div>
 
 									<form>
+
+										
 										<p>
 											<i class="ri-star-fill"></i>
+											<i style="color:rgb(231, 228, 102)" , class="ri-star-fill"></i>
+											
 											<i class="ri-star-fill"></i>
 											<i class="ri-star-fill"></i>
 											<i class="ri-star-fill"></i>
