--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,8 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.3.0/main.min.css" integrity="sha256-uq9PNlMzB+1h01Ij9cx7zeE2OR2pLAfRw3uUUOOPKdA=" crossorigin="anonymous">
+
         {% if app.user %}
             <!-- Start Header Area -->
             <div class="top-header-area bg-color-091c47">
@@ -84,7 +86,7 @@
                                             </li>
                                             <li class="nav-item">
                                                 {% if is_granted('ROLE_PATIENT') %}
-                                                <a class="nav-link">Rate a doctor</a>
+                                                <a  href="{{path('app_rate_new')}}" class="nav-link">Rate a doctor</a>
                                                 {% elseif is_granted('ROLE_MEDECIN') %}
                                                 
                                                 {% endif %}
@@ -345,9 +347,16 @@
         </div>
         <!-- End Navbar Area -->
         {% endif %}
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.3.0/main.min.css" integrity="sha256-uq9PNlMzB+1h01Ij9cx7zeE2OR2pLAfRw3uUUOOPKdA=" crossorigin="anonymous">
         {% block stylesheets %}
+<style>  
+      #calendrier{
+            width: 70% ;
+            margin: auto;
 
+      }
+
+</style>
             <link href="{{ asset('frontOffice/assets/css/bootstrap.min.css') }}"  rel="stylesheet" />
             <link href="{{ asset('frontOffice/assets/css/choicePicker.css') }}"  rel="stylesheet" />
             <link href="{{ asset('frontOffice/assets/css/owl.theme.default.min.css') }}"  rel="stylesheet" />
@@ -362,7 +371,11 @@
             <link href="{{ asset('frontOffice/assets/css/dark-mode.css') }}"  rel="stylesheet" />
             <link href="{{ asset('frontOffice/assets/css/responsive.css') }}"  rel="stylesheet" />
             <link href="{{ asset('frontOffice/assets/images/favicon.png') }}"  rel="stylesheet" />
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/core@4.1.0/main.min.css">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@4.1.0/main.min.css">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/timegrid@4.1.0/main.min.css">
         {% endblock %}
+        <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.3.0/main.min.js" integrity="sha256-DBxkGZLxKsLKhz054qUpBqtotG00r9AELGpSigJujLg=" crossorigin="anonymous"></script>
 
         {% block javascripts %}
             <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="assets/js/jquery.min.js"></script>
@@ -378,10 +391,15 @@
             <script src="{{ asset('assets/js/form-validator.min.js') }}"></script>
             <script src="{{ asset('assets/js/contact-form-script.js') }}"></script>
             <script src="{{ asset('assets/js/ajaxchimp.min.js') }}"></script>
-            <script src="{{ asset('assets/js/custom.js') }}"></script>        {% endblock %}
+            <script src="{{ asset('assets/js/custom.js') }}"></script>    
+          
+            
+            {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+        
+        {% endblock %}
     </body>
 <footer>	<!-- Start Footer Area -->
     <div class="footer-area bg-color-f1f5f8 pt-100 pb-70">
