--- a/templates/nav_con.html.twig
+++ b/templates/nav_con.html.twig
@@ -79,6 +79,13 @@
                                                 <a href="{{path('app_reservation_index')}}" class="nav-link">Consultations</a>
                                             </li>
                                             <li class="nav-item">
+                                                {% if is_granted('ROLE_PATIENT') %}
+                                                <a  href="{{path('app_rate_new')}}" class="nav-link">Rate a doctor</a>
+                                                {% elseif is_granted('ROLE_MEDECIN') %}
+                                                
+                                                {% endif %}
+                                            </li>
+                                            <li class="nav-item">
                                                 <a href="department-orthopedics.html" class="nav-link">Department Orthopedics</a>
                                             </li>
                                             <li class="nav-item">
@@ -207,15 +214,11 @@
                                 <div class="others-options">
                                     <ul class="d-flex align-items-center">
                                         <li>
-                                            <a href="cart.html" class="cart">
-                                                <img src="{{ asset('frontOffice/assets/images/svg-icon/cart.svg') }}" alt="Image">
-                                                <span>0</span>
-                                            </a>
+                                            
                                         </li>
                                         <li>
                                             <div class="option-item">
-                                                <img src="{{ asset('frontOffice/assets/images/svg-icon/search.svg') }}" class="search-btn" alt="Image">
-                                                <i class="close-btn ri-close-line"></i>
+                                               
 
                                                 <div class="search-overlay search-popup">
                                                     <div class='search-box'>
