--- a/templates/rate/_form.html.twig
+++ b/templates/rate/_form.html.twig
@@ -1,4 +1,6 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+{{ form_row(form.note ) }}
+{{ form_row(form.opinion ) }}
+{{ form_row(form.med ) }}
+   
 {{ form_end(form) }}
