--- a/templates/reservation/add.html.twig
+++ b/templates/reservation/add.html.twig
@@ -43,11 +43,14 @@
 
 
                          {{ form_start(form) }}
-                       {{ form_row(form.date ) }}
+                       {{ form_row(form.start ) }}
+					   {{ form_row(form.end ) }}
+					   {{ form_row(form.comment ) }}
    
     
                         {{ form_end(form) }}
-			
+						
+						
 					</div>
 
 				</div>
