--- a/templates/reservation/edit1.html.twig
+++ b/templates/reservation/edit1.html.twig
@@ -6,50 +6,7 @@
 
     <body>
 
-		<!--  Start Header Area -->
-		<div class="top-header-area bg-color-091c47">
-			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-lg-8">
-						<ul class="header-left-content">
-							<li>
-								<span>Phone:</span>
-								<a href="tel:1-885-665-2022">1-885-665-2022</a>
-							</li>
-							<li>
-								<span>Email:</span>
-								<a href="https://templates.envytheme.com/cdn-cgi/l/email-protection#a8c1c6cec7e8cacdd0c186cbc7c5"><span class="__cf_email__" data-cfemail="d3babdb5bc93b1b6abbafdb0bcbe">[email&#160;protected]</span></a>
-							</li>
-							<li>
-								<span>Mon-Sat:</span>
-								8:00AM - 7:00PM
-							</li>
-						</ul>
-					</div>
-
-					<div class="col-lg-4">
-						<ul class="header-right-content">
-							<li>
-								<i class="ri-user-3-line"></i>
-								<a href="{{path('login')}}">Login</a>
-							</li>
-							<li>
-								<select class="form-select" aria-label="Default select example">
-									<option selected>English</option>
-									<option value="1">China</option>
-									<option value="2">العربيّة</option>
-									<option value="3">Germany</option>
-									<option value="4">Portugues</option>
-								</select>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- End Header Area -->
-
-
+		
 
 		<!-- Start Page Banner Area -->
 		<div class="page-banner-area bg-22 pt-100">
@@ -63,9 +20,7 @@
 								Display Consultation 
 							</a>
 						</li>
-						<li>
-							<span>Stay here</span>
-						</li>
+						
 					</ul>
 				</div>
 			</div>
@@ -79,13 +34,19 @@
 					<div class="col-lg-6">
 						
 							<h2>Edit Consultation</h2>
+<tr>
+                            <td> {{ form_start(form) }}
+								{{ form_row(form.start ) }}
+								{{ form_row(form.end ) }}
+								{{ form_row(form.comment ) }}
+			
+			 
+								 {{ form_end(form) }}</td>
+						
 
-                            {{ include('reservation/_form.html.twig', {'button_label': 'Update'}) }}
-							<a href="{{ path('app_reservation_index') }}">back to list</a>
-
-							{{ include('reservation/_delete_form.html.twig') }}
+						<td>	{{ include('reservation/_delete_form.html.twig') }}</td>
                          
-
+					</tr>
 
 						
 					</div>
